--- a/CAPSProj/bin/src/main/resources/templates/lecturer/gradecourse.html
+++ b/CAPSProj/bin/src/main/resources/templates/lecturer/gradecourse.html
@@ -1,33 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-<meta charset="ISO-8859-1">
-<title>Courses Taught</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-	crossorigin="anonymous">
-</head>
+<head th:replace="Fragments/layout.html :: headerfiles"> </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">CAPS</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link"
-					th:href="@{/index}">Home</a></li>
-				<li class="nav-item"><a class="nav-link"
-					th:href="@{/lecturer/enrolment}">View Student Enrollment</a></li>
-			</ul>
-		</div>
-	</nav>
+	<nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
 
 	<div class="container">
 		<div class="row">
@@ -36,7 +13,7 @@
 		<form action="#" th:action="@{/lecturer/gradecourse2}">
 			<table>
 				<tr>
-					<td>Course <select name="courseID"
+					<td>Course <select class = "mb-4" name="courseID"
 						onchange="this.form.submit()">
 							<option th:if="${previousselectedcourse == null}" disabled
 								selected>Select an Option</option>
@@ -53,14 +30,15 @@
 				</tr>
 			</table>
 		</form>
-		<table class="table table-striped">
+		<table id = "table_gradecourse" class="table table-striped table-bordered">
 
 			<thead>
 				<tr>
 					<th>S/N</th>
 					<th>Student ID</th>
 					<th>Student Name</th>
-					<th>Assigned Exam Grade</th>
+					<th>Currently Assigned Grade</th>
+					<th>Change Exam Grade</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -69,31 +47,40 @@
 					<td th:text="${student.userID}"></td>
 					<td th:text="${student.firstName} + ' ' + ${student.lastName}"></td>
 					<th:block th:each="studentdetail: ${studentdetails}">
-						<td th:if="${student.userID} == ${studentdetail.student.userID}">
-							<form action="#" th:action="@{/lecturer/savegrade}">
-								<input type="hidden" name="studentID"
-									th:value="${student.userID}"> <input type="hidden"
-									name="courseID" th:value="${studentdetail.course.courseID}">
-								<select name="grade" onchange="this.form.submit()">
-									<option value="" th:selected="${studentdetail.grades} == null"></option>
-									<option value="A+" th:selected="${studentdetail.grades} == 'A+'">A+</option>
-									<option value="A" th:selected="${studentdetail.grades} == A">A</option>
-									<option value="A-" th:selected="${studentdetail.grades} == 'A-'">A-</option>
-									<option value="B+" th:selected="${studentdetail.grades} == 'B+'">B+</option>
-									<option value="B" th:selected="${studentdetail.grades} == B">B</option>
-									<option value="B-" th:selected="${studentdetail.grades} == 'B-'">B-</option>
-									<option value="C+" th:selected="${studentdetail.grades} == 'C+'">C+</option>
-									<option value="C" th:selected="${studentdetail.grades} == C">C</option>
-									<option value="D+" th:selected="${studentdetail.grades} == 'D+'">D+</option>
-									<option value="D" th:selected="${studentdetail.grades} == D">D</option>
-									<option value="F" th:selected="${studentdetail.grades} == F">F</option>
-								</select>
-							</form>
-						</td>
+						<th:block
+							th:if="${student.userID} == ${studentdetail.student.userID}">
+							<td th:text="${studentdetail.grades}"></td>
+							<td>
+								<form action="#" th:action="@{/lecturer/savegrade}">
+									<input type="hidden" name="studentID"
+										th:value="${student.userID}"> <input type="hidden"
+										name="courseID" th:value="${studentdetail.course.courseID}">
+									<select name="grade" onchange="this.form.submit()">
+										<option value=""></option>
+										<option value="A+">A+</option>
+										<option value="A">A</option>
+										<option value="A-">A-</option>
+										<option value="B+">B+</option>
+										<option value="B">B</option>
+										<option value="B-">B-</option>
+										<option value="C+">C+</option>
+										<option value="C">C</option>
+										<option value="D+">D+</option>
+										<option value="D">D</option>
+										<option value="F">F</option>
+									</select>
+								</form>
+							</td>
+						</th:block>
 				</tr>
 			</tbody>
 		</table>
 	</div>
+	<script>
+	  $(document).ready( function () {
+    	$('#table_gradecourse').DataTable();
+		} );
+	</script>
 </body>
 
 </html>
