--- a/CAPSProj/bin/src/main/resources/templates/student/gradesandgpa.html
+++ b/CAPSProj/bin/src/main/resources/templates/student/gradesandgpa.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"> 
-<head>
-<meta charset="ISO-8859-1">
-<title>Grades And GPA</title>
-</head>
+<head th:replace="Fragments/layout.html :: headerfiles"> </head>
 <body>
-
+<nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
 <h1>Grades And GPA</h1>
 
-<table>
+<div class = "container"> 
+	<div class = "row">
+		<div class = "container">
+<table id = "table_gradesgpa" class="table table-striped table-bordered">
 
 	<thead>
 
@@ -38,6 +38,10 @@
 	</tbody>
 	
 </table>&nbsp;&nbsp;
+		</div>
+	</div>
+</div>
+
 
 <div>
 	<span><a th:text=" 'Credits Earned:' + ${totalCredits}">CGPA</a></span>
@@ -51,10 +55,14 @@
 	<div>
 	<!-- temporarily view student of userID == 1 -->	
 	<button><a th:href="@{/student/lecturercourses}">Enroll for a course</a></button>
-	<button><a th:href="@{/student/enrolmentlist/1}">View Enrolment List and Withdraw</a></button>
-	<button><a th:href="@{/student/mycourses/1}">View My Courses</a></button>
+	<button><a th:href="@{/student/enrolmentlist}">View Enrolment List and Withdraw</a></button>
+	<button><a th:href="@{/student/mycourses}">View My Courses</a></button>
 	</div>
-	
+	<script>
+	  $(document).ready( function () {
+    	$('#table_gradesgpa').DataTable();
+		} );
+	</script>
 </body>
 </html>
 	
