--- a/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
+++ b/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
@@ -3,7 +3,7 @@
 <head th:replace="Fragments/layout.html :: headerfiles"> </head>
 <body>
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
-<h1>Grades And GPA</h1>
+<h1 class="text-center">Grades And GPA</h1>
 
 <div class = "container"> 
 	<div class = "row">
@@ -38,19 +38,14 @@
 	</tbody>
 	
 </table>&nbsp;&nbsp;
-		</div>
-	</div>
-</div>
+	<div>
+	<h5><a th:text=" 'Credits Earned: ' + ${totalCredits}">CreditsEarned</a></h5>
+	</div> &nbsp;&nbsp;
 
 
-<div>
-	<span><a th:text=" 'Credits Earned:' + ${totalCredits}">CGPA</a></span>
-</div> &nbsp;&nbsp;
-
-
-<div>
-	<span><a th:text=" 'CGPA:' + ${cgpa}">CGPA</a></span>
-</div>&nbsp;&nbsp;
+	<div>
+	<h5><a th:text=" 'CGPA: ' + ${cgpa}">CGPA</a></h5>
+	</div>&nbsp;&nbsp;
 
 	<div>
 	<!-- temporarily view student of userID == 1 -->	
@@ -58,6 +53,10 @@
 	<button><a th:href="@{/student/enrolmentlist}">View Enrolment List and Withdraw</a></button>
 	<button><a th:href="@{/student/mycourses}">View My Courses</a></button>
 	</div>
+		</div>
+	</div>
+</div>&nbsp;&nbsp;
+
 	<script>
 	  $(document).ready( function () {
     	$('#table_gradesgpa').DataTable();
