Set up email sending for creation of account and course enrolment

--- a/CAPSProj/src/main/resources/templates/admin/courselist.html
+++ b/CAPSProj/src/main/resources/templates/admin/courselist.html
@@ -28,8 +28,8 @@
 				<th>Credits</th>
 				<th>Course Description</th>
 				<th>Lecturers</th>
-				<th>Action</th>
-				<th></th>
+				<th>Edit</th>
+				<th>Delete</th>
 			</tr>
 		</thead>
 
