--- a/CAPSProj/src/main/resources/templates/admin/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/admin/enrolment.html
@@ -5,9 +5,10 @@
 
 <body>
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
-<h1>Enrolment Lists</h1>
+<h1 style="text-align:center;">Enrolment Lists</h1>
+<h4 style="text-align:center;">
 <a th:href="@{/admin/addenrolment}"> Add Enrolment</a>
-
+</h4>
 <div class = "container">
 	<div class = "row">
 		<div class = "container">
