--- a/CAPSProj/src/main/resources/templates/admin/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/admin/enrolment.html
@@ -10,7 +10,7 @@
 <a th:href="@{/admin/addenrolment}"> Add Enrolment</a>
 </h4>
 
-<div class = "container">
+<div class = "container-fluid">
 	<div class = "row">
 		<div class = "container">
 			<table id = "table_adminenrolment" class="table table-striped table-bordered">
