--- a/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
@@ -55,7 +55,7 @@
 		</thead>
 				
 		<tbody>
-			<tr th:each = "scd,iterator: ${studentCourseDetails2}">
+			<tr th:each = "scd,iterator: ${studentCourseDetails}">
 				<td th:text = "${iterator.index + 1}"></td>
 				<span th:each = "courses: ${scd.course}">
 					<td th:text = "${courses.courseName}"></td>
