--- a/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
@@ -31,12 +31,11 @@
 	</div>
 
 	<div class = "container">
-		<div class = "row justify-content-center mt-4">
+		<div class = "row justify-content-center mt-2">
 			<span th:each = "user : ${users}">
 				<a th:if="${user.role == T(sg.edu.iss.caps.model.Roles).STUDENT}">
-					<h5 class = "text-center">Grades For: </h5>
+					<h5 class = "text-center" th:text = "'Grades For: ' + ${user.firstName} + ' ' + ${user.lastName}"></h5>
 					<div class = "text-center">
-					<p th:text = "'Student Name: ' + ${user.firstName} + ' ' + ${user.lastName}"></p>
 					<p th:text = "'Student ID: ' + ${user.userID}"> </p>
 					</div>
 				</a>	
@@ -69,7 +68,7 @@
 </div>
 	
 	<div class = "container">
-		<div class = "row justify-content-center mt-5">
+		<div class = "row justify-content-center mt-2">
 		<h5><a th:text=" 'Total Credits Earned: ' + ${totalCredits}">CGPA</a></h5>
 		</div> 
 
