--- a/CAPSProj/src/main/resources/templates/admin/Admin.html
+++ b/CAPSProj/src/main/resources/templates/admin/Admin.html
@@ -63,7 +63,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
   </form>
 	</div>
 <div>
-	<table>
+	<table class="table table-striped table-bordered">
 		<tr>
 			<th>
 				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=userID&sortDir=' + ${reverseSortDir} + '&role=' + ${RoleType}}">
@@ -98,6 +98,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 			<th>Phone number</th>
 			<th>Email</th>
 			<th>Address</th>
+			<th>Action</th>
 		</tr>
 		<tr th:each="user:${ulist}">
 			<td th:text = ${user.userID}>UserID</td>
