StudentModule-Html and test changes
1. add TestCoursesRepo,TestStudentCoursesRepo
2. add firstName key-value pair in controller
3. change the pages buttons to nav bar
4. add "Welcome" + firstName + Role in html

--- a/CAPSProj/src/main/resources/templates/Fragments/layout.html
+++ b/CAPSProj/src/main/resources/templates/Fragments/layout.html
@@ -34,6 +34,25 @@
       <li class="nav-item">
         <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:href = "@{/admin/enrolment}">Enrolment</a>
       </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/gradesandgpa}">Grades And GPA</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/mycourses}">My Courses</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/availablecourselist}">Enroll for a Course</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/enrolmentlist}">Enrolment List and Withdraw</a>
+      </li>
+      
+      
+      
     </ul>
 		<a href="/logout"><button type="button" class="btn">Logout</button></a>
   </div>
