--- a/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
+++ b/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
@@ -4,10 +4,22 @@
 <body>
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
 <h1 class="text-center">Grades And GPA</h1>
+&nbsp;
+<div class="text-center">
+	 <div sec:authorize="isAuthenticated()">
+		 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		 Welcome <b><span th:text =${firstName}>first name</span></b>
+		&nbsp;
+		<span sec:authentication="principal.role">Roles</span>
+		<br><br>
+		
+	</div>
+</div>	
 
 <div class = "container"> 
 	<div class = "row">
 		<div class = "container">
+			
 <table id = "table_gradesgpa" class="table table-striped table-bordered">
 
 	<thead>
@@ -47,12 +59,7 @@
 	<h5><a th:text=" 'CGPA: ' + ${cgpa}">CGPA</a></h5>
 	</div>&nbsp;&nbsp;
 
-	<div>
-	<!-- temporarily view student of userID == 1 -->	
-	<button><a th:href="@{/student/availablecourselist}">Enroll for a course</a></button>
-	<button><a th:href="@{/student/enrolmentlist}">View Enrolment List and Withdraw</a></button>
-	<button><a th:href="@{/student/mycourses}">View My Courses</a></button>
-	</div>
+
 		</div>
 	</div>
 </div>&nbsp;&nbsp;
