--- a/CAPSProj/src/main/resources/templates/Fragments/layout.html
+++ b/CAPSProj/src/main/resources/templates/Fragments/layout.html
@@ -26,46 +26,50 @@
         <a class="nav-link" th:href = "@{/}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/enrolment}">View Student Enrollment</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:href = "@{/admin/courselist}">Courses</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:href = "@{/admin/enrolment}">Enrolment</a>
+	  </li>
+
+
+	   <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/gradesandgpa}">Grades And GPA</a>
       </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/mycourses}">My Courses</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/availablecourselist}">Enroll for a Course</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/enrolmentlist}">Enrolment List and Withdraw</a>
+	  </li>
+	  
+	  <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/coursestaught}">Courses I'm Teaching</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/enrolment}">View Student Enrollment</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/gradecourse}">Grade Students</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/viewstudentgrades}">View Students' CGPA</a>
+      </li>
+
+
     </ul>
 		<a href="/logout"><button type="button" class="btn">Logout</button></a>
   </div>
 </nav>
-
-	<div class = "container">
-		<div class = "row">
-			<h2 class = "text-center"> Courses Taught </h2>
-		</div>
-
-	<table id = "table_coursestaught" class="table table-striped">
-		<thead>
-			<tr>
-				<th>S/N</th>
-				<th>Course Id</th>
-				<th>Course Name</th>
-				<th>Maximum Intake</th>
-				<th>Current Enrollment</th>
-			</tr>
-		</thead>
-
-		<tbody>
-			<tr th:each = "coursetaught,iterator: ${coursestaught}">
-				<td th:text = "${iterator.index + 1}"></td>
-				<td th:text = "${coursetaught.courseID}"></td>
-				<td th:text = "${coursetaught.courseName}"></td>
-				<td th:text = "${coursetaught.courseCapacity}"></td>
-				<td th:text = "${coursetaught.currentEnrolment}"></td>
-			</tr>
-		</tbody>
-	</table>
-	</div>
 		<script>
 	  $(document).ready( function () {
     	$('#table_name').DataTable();
