--- a/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
@@ -15,7 +15,8 @@
 		
 							<div class = "form-group">
 								<label class = "ml-3 mb-3 mr-3"> Student ID: </label>
-									<input type = "number" name = "userID" class = "form-control" required>
+									<input type = "number" name = "userID" class = "form-control" 
+									min="1" step="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57" required>
 							</div>
 
 							<div class = "box-footer float-end ml-3">
