--- a/CAPSProj/src/main/resources/templates/admin/EditUser.html
+++ b/CAPSProj/src/main/resources/templates/admin/EditUser.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>User management</title>
+	<meta charset="ISO-8859-1">
+	<title>User management</title>
 
-<style type="text/css">
-		label{
+	<style type="text/css">
+		label {
 			display: inline-block;
 			width: 200px;
 		}
@@ -14,41 +14,43 @@
 
 </head>
 <body>
-	<div align ="center">
+	<div align="center">
 		<h1>User registration/edit</h1>
-			<form action ="#" th:action="@{/admin/user/save}" th:object = ${user} method = "post">
-				<label>First name:</label>
-				<input type = "text" th:field="*{firstName}"/><br><br>
-				
-				<label>Last name:</label>
-				<input type = "text" th:field="*{lastName}"/><br><br>
-				
-				<label>Salutation:</label>
-				<select th:field="*{salutation}">
-					<option th:each = "p : ${salutationList}" th:value="${p}" th:text="${p}"></option>
-				</select>
-				
-				<input type = "hidden" th:field="*{password}"/><br><br>
-				<input type = "hidden" th:field="*{userID}"/>
-				<input type = "hidden" th:field="*{enabled}"/>
-				
-				<label>Email:</label>
-				<input type = "text" th:field="*{email}"/><br><br>
-				
-				<label>Role:</label>
-				<select th:field="*{role}">
-				<option th:each="roles: ${T(sg.edu.iss.caps.model.Roles).values()}"
-				th:value="${roles}" th:text="${roles}"></option>
-				</select><br><br>
-									
-				<label>Phone Number:</label>
-				<input type = "text" th:field="*{phoneNumber}"/><br><br>
-				
-				<label>Address:</label>
-				<input type = "text" th:field="*{address}"/><br><br>
-				
-				<label>Date of birth: </label>
-				<input type = "date" th:field="*{birthday}"/><br><br>
+		<form action="#" th:action="@{/admin/user/save}" th:object=${user} method="post">
+			<label>First name:</label>
+			<input type="text" th:field="*{firstName}" /><br><br>
+
+			<label>Last name:</label>
+			<input type="text" th:field="*{lastName}" /><br><br>
+
+			<label>Salutation:</label>
+			<select th:field="*{salutation}">
+				<option th:each="p : ${salutationList}" th:value="${p}" th:text="${p}"></option>
+			</select>
+
+			<input type="hidden" th:field="*{password}" /><br><br>
+			<input type="hidden" th:field="*{userID}" />
+			<input type="hidden" th:field="*{enabled}" />
+
+			<label>Email:</label>
+			<input type="text" th:field="*{email}" /><br><br>
+
+			<label>Role:</label>
+			<select th:field="*{role}">
+				<option th:each="roles: ${T(sg.edu.iss.caps.model.Roles).values()}" th:value="${roles}"
+					th:text="${roles}"></option>
+			</select><br><br>
+
+			<label>Phone Number:</label>
+			<input type="text" th:field="*{phoneNumber}" /><br><br>
+
+			<label>Address:</label>
+			<input type="text" th:field="*{address}" /><br><br>
+
+			<label>Date of birth: </label>
+			<input type="date" th:field="*{birthday}" /><br><br>
+			<p th:if="${#fields.hasErrors('birthday')}"
+				th:errors="*{birthday}" style="color: red"></p>
 				<br>
 				<br>
 				<br>
