--- a/CAPSProj/src/main/resources/templates/index.html
+++ b/CAPSProj/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 		       	<li class="nav-item">
 		          <a class="nav-link" href="#feature">Feature</a>
 		        </li>
-		        <li class="nav-item">
+		        <li class="nav-item" sec:authorize="isAuthenticated()">
 		          <a class="nav-link" th:href ="@{home/edituser}">Update Profile</a>
 		        </li>
 		       	
