--- a/CAPSProj/src/main/resources/templates/404.html
+++ b/CAPSProj/src/main/resources/templates/404.html
@@ -70,6 +70,9 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 </div>
 
 		<div>
-			<h1 class="heading"> You are not authorised to access this page.</h1>
 
+			<h1 class="heading">
+				You seem to be lost! Click <a class="nav-link active"
+					aria-current="page" href="/#">Here</a> to go back to the home page.
+			</h1>
 		</div>
