--- a/CAPSProj/src/main/resources/templates/error.html
+++ b/CAPSProj/src/main/resources/templates/error.html
@@ -70,6 +70,10 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 </div>
 
 		<div>
-			<h1 class="heading"> You are not authorised to access this page.</h1>
+			<h1 class="heading">
+				An error occurred. Please contact us at <a
+					href="mailto:nusisssa52t2@gmail.com">
+					nusisssa52t2@gmail.com </a>
+			</h1>
 
 		</div>
