--- a/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
@@ -47,6 +47,7 @@
 		<thead>
 			<tr>
 				<th>S/N</th>
+				<th>Course ID</th>
 				<th>Course Name</th>
 				<th>Exam Date</th>
 				<th>Credits</th>
@@ -58,6 +59,7 @@
 			<tr th:each = "scd,iterator: ${studentCourseDetails}">
 				<td th:text = "${iterator.index + 1}"></td>
 				<span th:each = "courses: ${scd.course}">
+					<td th:text = "${courses.courseID}"></td>
 					<td th:text = "${courses.courseName}"></td>
 					<td th:text = "${courses.examDate}"></td>
 					<td th:text = "${courses.credits}"></td>
