--- a/CAPSProj/src/main/resources/templates/userProfileForm.html
+++ b/CAPSProj/src/main/resources/templates/userProfileForm.html
@@ -10,12 +10,17 @@
 			width: 200px;
 		}
 		input[type=text], input[type=date], select{display: inline-block; width:200px;}
+		
+		span {
+			color: red;
+			font-style:italic;
+			}
 </style>
 
 </head>
 <body>
 <div align ="center">
-		<h1>User registration</h1>
+		<h1>Profile update</h1>
 			<form action ="#" th:action="@{/home/profile/save}" th:object = ${user} method = "post"
 			enctype="multipart/form-data">
 				<label>First name:</label>
@@ -25,9 +30,13 @@
 				<input type = "text" th:field="*{lastName}"/><br><br>
 				
 				<label> Password: </label>
-				<input type = "password" th:field="*{password}"/><br><br>
+				<input type="password" th:field="*{password}" />
+				<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</span>
+				<br><br>
 				<input type = "hidden" th:field="*{userID}"/>
 				<input type = "hidden" th:field="*{enabled}"/>
+				<input type = "hidden" th:field="*{salutation}" th:value="${salutation}"/>
+				<input type = "hidden" th:field="*{role}"/>
 				
 				<label>Email:</label>
 				<input type = "text" th:field="*{email}"/><br><br>
