Change Pw 90% done altered profile edit form

--- a/CAPSProj/src/main/resources/templates/index.html
+++ b/CAPSProj/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 		      </ul>
 		      <form class="d-flex">
 		        <div sec:authorize="isAnonymous()">
-					<a href="/login"><button type="button" class="btn">Login</button></a>
+					<a href="/home/login"><button type="button" class="btn">Login</button></a>
 				</div>
 				 </form>
 				<div sec:authorize="isAuthenticated()">
